[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[project]
name = "nectarengine"
version = "1.0.0"
description = "command line tool and python library for sending hive engine tokens"
readme = "README.md"
keywords = ["hive", "nft", "tools"]
license = "MIT"
maintainers = [{ name = "Michael Garcia", email = "thecrazygm@gmail.com" }]
authors = [
  { name = "Michael Garcia", email = "thecrazygm@gmail.com" },
  { name = "Holger Nahrstaedt", email = "nahrstaedt@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["click-shell>=2.1", "hive-nectar>=1.0.0", "httpx2>=2.2.0"]

[project.urls]
"Bug Tracker" = "https://github.com/srbde/nectarengine/issues"
Documentation = "https://nectarengine.readthedocs.io"
Homepage = "https://github.com/srbde/nectarengine"

[project.scripts]
nectarengine = "nectarengine.cli:cli"

[dependency-groups]
dev = [
  "coverage",
  "pytest",
  "ruff",
  "sphinx",
  "sphinx-click",
  "sphinx-rtd-theme",
  "tomli",
]

[tool.uv]
publish-url = "https://test.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
hive-nectar = { path = "../hive-nectar", editable = true }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["E402"]
"__init__.py" = ["E402"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = ["-rw", "--doctest-modules"]
markers = [
  "network: tests that require network access to live blockchain nodes",
]
